[tool.poetry]
name = "asymmetric-jwt-auth"
version = "1.2.0"
description = "Asymmetric key based authentication for HTTP APIs"
authors = ["Craig Weber <crgwbr@gmail.com>"]
maintainers = ["Craig Weber <crgwbr@gmail.com>"]
readme = "README.rst"
homepage = "https://gitlab.com/thelabnyc/asymmetric-jwt-auth"
repository = "https://gitlab.com/thelabnyc/asymmetric-jwt-auth"
license = "ISC"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: ISC License (ISCL)",
]
packages = [
    { include = "asymmetric_jwt_auth", from = "src" },
]


[tool.poetry.dependencies]
python = "^3.11"
cryptography = ">=44.0.2"
Django = ">=4.2"
PyJWT = "^2.10.1"

[tool.poetry.group.dev.dependencies]
coverage = "^7.8.0"
django-stubs = "^5.1.3"
flake8 = "^7.2.0"
freezegun = "^1.5.1"
mypy = "^1.15.0"
sphinx-rtd-theme = "^3.0.2"
sphinx = "^8.2.3"
types-cryptography = "^3.3.23.2"

[build-system]
requires = ["poetry-core>=2.1.2"]
build-backend = "poetry.core.masonry.api"

[tool.commitizen]
name = "cz_conventional_commits"
annotated_tag = true
gpg_sign = true
tag_format = "v$version"
update_changelog_on_bump = true
changelog_merge_prerelease = true
version_provider = "poetry"
version_scheme = "pep440"
version_files = [
    "pyproject.toml:version",
]
pre_bump_hooks = [
    "pre-commit run --all-files || true",
]
post_bump_hooks = [
    "git push origin master $CZ_POST_CURRENT_TAG_VERSION"
]

[tool.isort]
profile = "black"
from_first = true
